fixed flex-wrap on prod. page

--- a/css/product_page.css
+++ b/css/product_page.css
@@ -90,7 +90,9 @@
 .browsing-list {
     margin-bottom: 116px;
     display: flex;
+    flex-wrap: wrap;
     height: fit-content;
+
 }
 
 .product-input {
